--- a/AI換臉.ipynb
+++ b/AI換臉.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvYM4Yrg2B9sLjYSm19lTB",
+      "authorship_tag": "ABX9TyNUPJrRWLogGO8eislusoF0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wa1DsC5ZAp00",
-        "outputId": "9ad355fb-e76f-4a52-aa09-bcfdec821738"
+        "id": "ZkUkYUsFDlWb"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n",
-            "Cloning into 'SimSwap'...\n",
-            "remote: Enumerating objects: 1071, done.\u001b[K\n",
-            "remote: Total 1071 (delta 0), reused 0 (delta 0), pack-reused 1071\u001b[K\n",
-            "Receiving objects: 100% (1071/1071), 210.80 MiB | 24.97 MiB/s, done.\n",
-            "Resolving deltas: 100% (553/553), done.\n",
-            "/content/SimSwap\n",
-            "Already on 'main'\n",
-            "Your branch is up to date with 'origin/main'.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%cd /content\n",
         "!git clone https://github.com/neuralchen/SimSwap.git\n",
@@ -66,28 +46,13 @@
         "!pip install -q torch==1.13.0\n",
         "!pip install insightface==0.2.1 onnxruntime moviepy > /dev/null\n",
         "!pip install googledrivedownloader > /dev/null\n",
-        "!pip install imageio==2.4.1 > /dev/null\n"
+        "!pip install imageio==2.4.1 > /dev/null"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hvg5AndFBAni",
-        "outputId": "2537c215-8bee-456e-96c4-e1e65e2963d8"
+        "id": "0NcXZ0CYDq0S"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "tensorflow 2.9.2 requires protobuf<3.20,>=3.9.2, but you have protobuf 3.20.3 which is incompatible.\n",
-            "tensorboard 2.9.1 requires protobuf<3.20,>=3.9.2, but you have protobuf 3.20.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -95,22 +60,10 @@
         "%cd /content/SimSwap"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X6UnIxQDBA7J",
-        "outputId": "482e982f-b963-4b29-e3af-9f1cd17421d7"
+        "id": "SLUJLBL8Dq9g"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/SimSwap\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -123,65 +76,10 @@
         "!wget https://github.com/neuralchen/SimSwap/releases/download/512_beta/512.zip\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8XeII3u2BBA6",
-        "outputId": "156f6cb7-5363-49f2-8e34-8c5fc00ae9e3"
+        "id": "-coZReIRDrAh"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-01-08 10:55:44--  https://github.com/neuralchen/SimSwap/releases/download/1.0/arcface_checkpoint.tar\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/e17b9d00-dcb8-11eb-8c4f-1412bcea78a6?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105544Z&X-Amz-Expires=300&X-Amz-Signature=8e0e4970802c3d97ef5bd7d0c5070be825914c521fcf9bb402d29fd551d32fdf&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3Darcface_checkpoint.tar&response-content-type=application%2Foctet-stream [following]\n",
-            "--2023-01-08 10:55:44--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/e17b9d00-dcb8-11eb-8c4f-1412bcea78a6?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105544Z&X-Amz-Expires=300&X-Amz-Signature=8e0e4970802c3d97ef5bd7d0c5070be825914c521fcf9bb402d29fd551d32fdf&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3Darcface_checkpoint.tar&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.111.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 766871429 (731M) [application/octet-stream]\n",
-            "Saving to: ‘./arcface_model/arcface_checkpoint.tar’\n",
-            "\n",
-            "arcface_checkpoint.  50%[=========>          ] 372.01M  2.20MB/s    eta 60s    ^C\n",
-            "--2023-01-08 10:56:48--  https://github.com/neuralchen/SimSwap/releases/download/1.0/checkpoints.zip\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/a8dac400-dcb6-11eb-933f-977cd7f5f554?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105648Z&X-Amz-Expires=300&X-Amz-Signature=b0c0da21c8e414936f04ddac052834acd6d51d1f2373a23448a2f5d805c12831&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3Dcheckpoints.zip&response-content-type=application%2Foctet-stream [following]\n",
-            "--2023-01-08 10:56:48--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/a8dac400-dcb6-11eb-933f-977cd7f5f554?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105648Z&X-Amz-Expires=300&X-Amz-Signature=b0c0da21c8e414936f04ddac052834acd6d51d1f2373a23448a2f5d805c12831&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3Dcheckpoints.zip&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... ^C\n",
-            "--2023-01-08 10:56:49--  https://github.com/neuralchen/SimSwap/releases/download/1.0/79999_iter.pth\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/6f43c2ff-c59c-48ad-9854-392249307d00?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105649Z&X-Amz-Expires=300&X-Amz-Signature=17820fd701c3db2f4a5ccfd6fe1185833b442abc0e2c8fc5a881166dda5b75ea&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3D79999_iter.pth&response-content-type=application%2Foctet-stream [following]\n",
-            "--2023-01-08 10:56:49--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/6f43c2ff-c59c-48ad-9854-392249307d00?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105649Z&X-Amz-Expires=300&X-Amz-Signature=17820fd701c3db2f4a5ccfd6fe1185833b442abc0e2c8fc5a881166dda5b75ea&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3D79999_iter.pth&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... ^C\n",
-            "--2023-01-08 10:56:50--  https://github.com/neuralchen/SimSwap/releases/download/512_beta/512.zip\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/ac0bc79e-b94c-4c80-af0c-b1ed2f7187b3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105650Z&X-Amz-Expires=300&X-Amz-Signature=ad0d6df93d3bac3fe704c7526182a312058b8277d545488384ab38d22c834cb5&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3D512.zip&response-content-type=application%2Foctet-stream [following]\n",
-            "--2023-01-08 10:56:50--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/374891081/ac0bc79e-b94c-4c80-af0c-b1ed2f7187b3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230108%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230108T105650Z&X-Amz-Expires=300&X-Amz-Signature=ad0d6df93d3bac3fe704c7526182a312058b8277d545488384ab38d22c834cb5&X-Amz-SignedHeaders=host&actor_id=0&key_id=0&repo_id=374891081&response-content-disposition=attachment%3B%20filename%3D512.zip&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 282817182 (270M) [application/octet-stream]\n",
-            "Saving to: ‘512.zip’\n",
-            "\n",
-            "512.zip               0%[                    ]       0  --.-KB/s               ^C\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -189,10 +87,10 @@
         "!wget --no-check-certificate \\\n",
         " https://sh23tw.dm.files.1drv.com/y4mmGiIkNVigkSwOKDcV3nwMJulRGhbtHdkheehR5TArc52UjudUYNXAEvKCii2O5LAmzGCGK6IfleocxuDeoKxDZkNzDRSt4ZUlEt8GlSOpCXAFEkBwaZimtWGDRbpIGpb_pz9Nq5jATBQpezBS6G_UtspWTkgrXHHxhviV2nWy8APPx134zOZrUIbkSF6xnsqzs3uZ_SEX_m9Rey0ykpx9w \\\n",
         " -O antelope.zip\n",
-        "     \n"
+        "     "
       ],
       "metadata": {
-        "id": "i2YtpNuIBnvG"
+        "id": "teVhxwAxDrC_"
       },
       "execution_count": null,
       "outputs": []
@@ -207,7 +105,7 @@
         "!unzip antelope.zip -d ./insightface_func/models/\n"
       ],
       "metadata": {
-        "id": "ITYs5lgOB0IS"
+        "id": "O99vAfQjDrH0"
       },
       "execution_count": null,
       "outputs": []
@@ -219,10 +117,10 @@
         "\n",
         "!wget https://i.imgur.com/QYJOzy7.jpeg -O cpc_ackboo.jpg\n",
         "!wget https://i.imgur.com/l5MGOws.jpeg -O starwars_meme.jpg\n",
-        "     \n"
+        "     "
       ],
       "metadata": {
-        "id": "g0A6fpvxB0XZ"
+        "id": "1RQJgk7YDrKA"
       },
       "execution_count": null,
       "outputs": []
@@ -231,10 +129,10 @@
       "cell_type": "code",
       "source": [
         "input_fname = '/content/cpc_ackboo.jpg'\n",
-        "output_fname = '/content/starwars_meme.jpg'\n"
+        "output_fname = '/content/starwars_meme.jpg'"
       ],
       "metadata": {
-        "id": "2ASxXKWjB0Zx"
+        "id": "_r1utPM9DrMi"
       },
       "execution_count": null,
       "outputs": []
@@ -259,7 +157,7 @@
         "  return tuple(new_img_size)\n"
       ],
       "metadata": {
-        "id": "5gL0L8Z3B0ji"
+        "id": "0wvwCr0xDrO4"
       },
       "execution_count": null,
       "outputs": []
@@ -291,7 +189,7 @@
         "jpg_output = output_fname.replace('.png', '.jpg')\n"
       ],
       "metadata": {
-        "id": "fCZyBk_XB-AJ"
+        "id": "xg_yAqDwDrRO"
       },
       "execution_count": null,
       "outputs": []
@@ -313,7 +211,7 @@
         " --output_path /content/output/single/ > /dev/null\n"
       ],
       "metadata": {
-        "id": "6qirZtxqB-Hj"
+        "id": "PUmRwgqqDrTo"
       },
       "execution_count": null,
       "outputs": []
@@ -335,7 +233,7 @@
         " --output_path /content/output/multi/ > /dev/null"
       ],
       "metadata": {
-        "id": "DiskLvPZCMf5"
+        "id": "kSWxKw2WEF6z"
       },
       "execution_count": null,
       "outputs": []
